force-app/main/default/objects/CodeQualityReportLinter__c/CodeQualityReportLinter__c.object-meta.xml
<CustomObject>
    <label>Code Quality Report Linter</label>
    <nameField>
        <displayFormat>CQRL-{00000}</displayFormat>
        <label>Code Quality Report Linter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Code Quality Report Linters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>