force-app/main/default/objects/CodeQualityReportLinter__c/fields/CodeQualityReport__c.field-meta.xml
<CustomField>
    <fullName>CodeQualityReport__c</fullName>
    <label>Code Quality Report</label>
    <referenceTo>CodeQualityReport__c</referenceTo>
    <relationshipLabel>Code Quality Report Linters</relationshipLabel>
    <relationshipName>CodeQualityReportLinters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>