force-app/main/default/objects/CodeQualityReportLinter__c/fields/Descriptor__c.field-meta.xml
<CustomField>
    <fullName>Descriptor__c</fullName>
    <label>Descriptor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>