force-app/main/default/objects/CodeQualityReportLinter__c/fields/ElapsedTimeMs__c.field-meta.xml
<CustomField>
    <fullName>ElapsedTimeMs__c</fullName>
    <label>Elapsed Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>