force-app/main/default/objects/CodeQualityReportLinter__c/fields/ErrorsNumber__c.field-meta.xml
<CustomField>
    <fullName>ErrorsNumber__c</fullName>
    <label>Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>