force-app/main/default/objects/CodeQualityReportLinter__c/fields/FixedNumber__c.field-meta.xml
<CustomField>
    <fullName>FixedNumber__c</fullName>
    <label>Fixed Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>