force-app/main/default/objects/CodeQualityReportLinter__c/fields/LintedFilesNumber__c.field-meta.xml
<CustomField>
    <fullName>LintedFilesNumber__c</fullName>
    <label>Linted Files</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>