force-app/main/default/objects/CodeQualityReportLinter__c/fields/Linter__c.field-meta.xml
<CustomField>
    <fullName>Linter__c</fullName>
    <label>Linter</label>
    <length>50</length>
    <type>Text</type>
</CustomField>