force-app/main/default/objects/CodeQualityReportLinter__c/fields/LinterDocUrl__c.field-meta.xml
<CustomField>
    <fullName>LinterDocUrl__c</fullName>
    <label>Linter Doc Url</label>
    <type>Url</type>
</CustomField>