force-app/main/default/objects/CodeQualityReportLinter__c/fields/LinterOutputText__c.field-meta.xml
<CustomField>
    <fullName>LinterOutputText__c</fullName>
    <label>Linter Output Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>